manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: fe-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fe-nginx
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: fe-nginx
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
        - name: "fe-nginx"
          image: "ascicdacr.azurecr.io/fe-nginx:latest"
          ports:
          - containerPort: 80
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
