manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fe-nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: fe-nginx
